FIX: Contact btns on mobile screen

--- a/sass/_blocks.sass
+++ b/sass/_blocks.sass
@@ -20,48 +20,52 @@
       font-size: 30px
       display: block
   &__wrap
-    position: relative
+    display: flex
+    justify-content: center
+    align-items: center
     +screen_md
       min-height: 500px
   &__content
-    padding: 40px 0 20px
+    padding: 20px 0
     color: white
-    +screen_md
-      position: absolute
-      left: 0
-      top: 0
-      bottom: 0
-      right: 0
-      display: flex
-      align-items: center
     &__text
       &_title
         color: white
         font-weight: bold
         font-size: 2rem
+        margin-top: 0
       &_light
         font-size: 12px
         font-weight: 300
         &::before
-          margin-right: 10px
           font-size: 14px
     &__item
       color: white
-      &::before
-        margin-right: 10px
   &__dot
-    background: transparent
+    background: white
     border: none
-    color: white
-    +screen_md
-      margin: 0 15px
-    &:focus
+    color: $black
+    padding: 15px 10px
+    width: 20%
+    position: relative
+    text-align: center
+    bottom: -6px
+    &:focus, &:hover
       outline: none 
+      color: $pink
     &__wrap
-      position: absolute
-      top: 10px
+      position: relative
+      top: 0
+      display: flex
+      left: 0
+      right: 0
+      border-bottom: 6px solid white
+      justify-content: space-around
+      padding-top: 15px
+      background: #d53e5c
 .active
   color: $pink
+  background: $black
 
 .form
   +screen_md
