--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -3,15 +3,15 @@
 .header
   position: relative
   &_upper
-    display: none
-    position: absolute
-    top: 65px
-    right: 15px
+    // display: none
+    // position: absolute
+    // top: 65px
+    // right: 15px
     background: white
-    z-index: 10
-    +screen_md
-      position: static
-      display: block
+    // z-index: 10
+    // +screen_md
+      // position: static
+      // display: block
 
 .toolbar 
   padding: 5px 0
@@ -45,18 +45,19 @@
   &:hover
     color: $black
   &::before
-    content: 'CEO'
+    content: 'Ads'
     font-size: 30px
     font-weight: bold
     color: $pink
   &::after
-    content: ' target'
+    content: ' Target'
     font-size: 25px
 
 %icon-common
   color: $pink
   font-size: 20px
   vertical-align: -2px
+  margin-right: 10px
 
 $fab-icons: (telegram: '\f2c6', whatsapp: '\f232', forecast: '\f838')
 $fas-icons: (phone: '\f095', target: '\f140', tags: '\f02c', percent: '\f295', apple: '\f5d1', users: '\f0c0', time: '\f254', tick: '\f058')
@@ -76,17 +77,17 @@ $fas-icons: (phone: '\f095', target: '\f140', tags: '\f02c', percent: '\f295', a
       font-weight: 600
       @extend %icon-common
 
-      
+    
 
 
 .contact
   padding: 5px 0
+  display: flex
+  justify-content: space-between
   +screen_md
     padding: 20px 0
-    display: flex
-    justify-content: space-between
   &__list
-    +screen_md
+    +screen_lg
       display: flex
   &__btn
     margin-left: 10px
@@ -96,15 +97,44 @@ $fas-icons: (phone: '\f095', target: '\f140', tags: '\f02c', percent: '\f295', a
     border: none
     border-radius: 10px
     box-shadow: 0 3px 3px 0 #00000054
+    display: inline-block
+    margin-bottom: 10px
     +screen_lg
+      margin-bottom: 0
       &:hover, &:focus
         outline: none
         color: $pink
         background-color: #fff
-  .logo
-    display: none
+  &__phone
+    position: fixed
+    overflow: hidden
+    width: 58px
+    height: 58px
+    border-radius: 50%
+    background: $pink
+    color: $pink
+    z-index: 1
+    bottom: 10px
+    right: 20px
+    &:hover, &:focus
+      color: $pink
+    &::before
+      color: white
+      font-size: 26px
+      line-height: 1.95
     +screen_md
-      display: initial
+      position: static
+      overflow: initial
+      width: initial
+      height: initial
+      border-radius: 10px
+      background: $black
+      color: white
+      display: inline-block
+      &::before
+        color: $pink
+        font-size: 20px
+        line-height: unset
 
         
 .menu
